<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".uploadImage">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="20dp"
                android:background="@drawable/green_border">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/infected_plant_details"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:textColor="@color/primary_green"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_baseline_add_a_photo_24"
                    android:id="@+id/uploadImage"
                    android:layout_marginTop="10dp"
                    android:scaleType="fitXY"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/uploadTopic"
                    android:background="@drawable/green_border"
                    android:layout_marginTop="20dp"
                    android:padding="16dp"
                    android:hint="@string/write_your_name"
                    android:gravity="start|center_vertical"
                    android:textColor="@color/primary_green"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:id="@+id/uploadDesc"
                    android:background="@drawable/green_border"
                    android:layout_marginTop="20dp"
                    android:padding="16dp"
                    android:hint="@string/explain_your_problem"
                    android:gravity="start|center_vertical"
                    android:textColor="@color/primary_green"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/uploadLang"
                    android:background="@drawable/green_border"
                    android:layout_marginTop="20dp"
                    android:padding="16dp"
                    android:hint="@string/enter_crop_type"
                    android:gravity="start|center_vertical"
                    android:textColor="@color/primary_green"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/save"
                    android:id="@+id/saveButton"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    app:cornerRadius = "20dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>