<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_n_farmer_friends"
            android:layout_gravity="start"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:textStyle="italic"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:src="@drawable/indian_farmer"
                android:layout_gravity="start"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="+"
                android:gravity="center"
                android:textSize="40dp"
                android:textColor="@color/black"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/expert"
                />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="200dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp"
            android:layout_margin="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/cxui"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnuploadimage"
                    android:background="@drawable/button_shaper"
                    android:layout_gravity="bottom"
                    android:layout_margin="8dp"
                    android:text="@string/ask_expert"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="200dp"
            app:cardUseCompatPadding="true"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp"
            android:layout_margin="8dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/cxss"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mToResponsePage"
                android:background="@drawable/button_shaper"
                android:layout_gravity="bottom"
                android:layout_margin="8dp"
                android:text="@string/view_solutions"
                android:textColor="@color/white"
                />


        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#F2EAD3"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/home"
            android:layout_weight="1"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_home_24"
                android:layout_marginTop="4dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/home"
                android:textColor="@color/primary_green"
                android:textSize="12sp"
                android:textStyle="italic"
                android:gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/post"
            android:layout_weight="1"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_assistant_24"
                android:layout_marginTop="4dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/expert_posts"
                android:textColor="@color/primary_green"
                android:textSize="12sp"
                android:textStyle="italic"
                android:gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/chat"
            android:layout_weight="1"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_chat_24"
                android:layout_marginTop="4dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/chat"
                android:textColor="@color/primary_green"
                android:textSize="12sp"
                android:textStyle="italic"
                android:gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/shop"
            android:layout_weight="1"
            android:gravity="center"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_shopping_cart_24"
            android:layout_marginTop="4dp"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/shop"
            android:textColor="@color/primary_green"
            android:textSize="12sp"
            android:textStyle="italic"
            android:gravity="center"
            />

    </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/language"
            android:layout_weight="1"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_language_24"
                android:layout_marginTop="4dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/languages"
                android:textColor="@color/primary_green"
                android:textSize="12sp"
                android:textStyle="italic"
                android:gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>