<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailTitle"
            android:text="@string/name"
            android:layout_marginTop="14dp"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:textColor="@color/primary_green"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailImage"
            android:padding="8dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_photo_camera_black_48dp"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:text="@string/your_problem_details"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:text="@string/your_problem_details"
            android:layout_gravity="center"
            android:id="@+id/detailLang"
            android:textSize="18sp"
            android:textColor="@color/primary_green"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:text="@string/solutions_provided_by_our_experts"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:text="@string/solutions_provided_by_our_experts"
            android:layout_gravity="center"
            android:id="@+id/detailDesc"
            android:textSize="18sp"
            android:textColor="@color/primary_green"/>


    </LinearLayout>



</ScrollView>