<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".post">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_baseline_assistant_24"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#F2EAD3"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/home"
            android:layout_weight="1"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_home_24"
                android:layout_marginTop="4dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/home"
                android:textColor="@color/primary_green"
                android:textSize="12sp"
                android:textStyle="italic"
                android:gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/post"
            android:layout_weight="1"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_assistant_24"
                android:layout_marginTop="4dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/expert_posts"
                android:textColor="@color/primary_green"
                android:textSize="12sp"
                android:textStyle="italic"
                android:gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/chat"
            android:layout_weight="1"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_chat_24"
                android:layout_marginTop="4dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/chat"
                android:textColor="@color/primary_green"
                android:textSize="12sp"
                android:textStyle="italic"
                android:gravity="center"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/shop"
            android:layout_weight="1"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_shopping_cart_24"
                android:layout_marginTop="4dp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/shop"
                android:textColor="@color/primary_green"
                android:textSize="12sp"
                android:textStyle="italic"
                android:gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>